added endpoints for instruments
